--- a/style.css
+++ b/style.css
@@ -1,16 +1,13 @@
 
 
 
-*{
-    padding: 0;
-    margin: 0%;
-}
+
 
 header{
     /* background-color: aquamarine; */
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    /* justify-content: space-between;
+    align-items: center; */
     padding: 10px;
 }
 
