--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@
 header{
     /* background-color: aquamarine; */
     display: flex;
-    /* justify-content: space-between;
-    align-items: center; */
+    justify-content: space-between;
+    align-items: center;
     padding: 10px;
 }
 
