--- a/style.css
+++ b/style.css
@@ -1,19 +1,27 @@
 
 
 
+body {
+    padding: 0%;
+    margin: 0%;
+}
 
-
-header{
-    /* background-color: aquamarine; */
-    display: flex;
+.header{
+    display: block;
     justify-content: space-between;
+    gap: 30px;
     align-items: center;
     padding: 10px;
 }
+.nav-link {
+    justify-content: space-between;
+    gap: 10px;
+}
 
-nav ul{
+ul{
+    list-style-type: disc;
     display: flex;
-    justify-content: space-around;
+    justify-content: gap-between;
     align-items: center;
     list-style-type: none;
     margin: 0;
@@ -28,3 +36,10 @@ a {
     text-decoration: none;
 }
 
+#first-hero-section{
+
+}
+
+#second-hero-section{
+
+}
