--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
-<!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+/* <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
 <!-- <style>
   .attribution { font-size: 11px; text-align: center; }
   .attribution a { color: hsl(228, 45%, 44%); }
-</style> -->
+</style> --> */
 
 
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
