--- a/style.css
+++ b/style.css
@@ -107,7 +107,10 @@ a {
     padding: 1rem 0;
 }
 
-h1 {}
+h1 {
+    font-family: "Raleway", sans-serif;
+    /* font-family: "Open Sans", sans-serif important; */ */
+}
 
 #first-hero-section {
     display: flex;
@@ -252,54 +255,76 @@ svg{
     padding: 0;
 }
 
+
 .third-hero-section {
     display: flex;
     align-items: center;
-    padding: 0 30px;
-    /* margin: 10rem 0; */
-}
-.blockF-div
+    width: 100vw;
+    background-color: var(--Desaturated-Blue);
+    padding: 60px 30px;
 
-.button2 {
+}
+
+
+.blockE-div h2  {
+    font-family: "Raleway", sans-serif;
+    color: white;
+    padding-bottom: 1.0rem;
+}
+
+
+.blockE-div p {
+    color: white;
+    font-weight: lighter;
+    width: 80%;
+}
+
+
+.blockF input,.input2 {
+    padding: 0.7rem;
+    margin-bottom: 1rem;
+    margin-right: 0.9rem;
+    font-family: "Open Sans", sans-serif;
+    /* border-radius: 2.5px; */
+    width: 70%;
+}
+
+.blockE {
+    width: 50%;
+}
+
+.blockF {
+    width: 50%;
+    align-items: center;
+}
+
+.blockE-div {
+    width: 100%;
+}
+
+.blockF-div {
+    width: 100%;
+}
+
+
+.blockF-div input {
+    border-radius: 4px;;
+    border: none;;
+}
+
+.blockF-div input::placeholder {
+    opacity: 20%;
+}
+
+
+.blockF button {    
     padding: 0.7rem;
     color: white;
     background-color: var(--Bright-Blue);
     border: none;
     border-radius: 3px;
-    width: 45%;
+    width: 30%;
     font-family: "Open Sans", sans-serif;
-    
+    font-weight: lighter;
 }
 
-.blockF input,.input2 {
-    padding: 0.7rem;
-    margin-right: 0.9rem;
-    font-family: "Open Sans", sans-serif;
-    /* border-radius: 2.5px; */
-    width: 50%;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* The designs were created to the following widths:
-
-- Mobile: 375px
-- Desktop: 1440px */
